@@ -1,3 +1,13 @@
+2002-08-31  Vino Crescini  <jcrescin@cit.uws.edu.au>
+
+	* datastruct/Makefile :
+	* datastruct/index.c :
+	* datastruct/index.h :
+	* datastruct/indexedlist.c :
+	* datastruct/indexedlist.h :
+
+	  - Removed unused files.
+
 2002-08-29  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
 	* README :
